<resources>
    <string name="app_name">SendMealretry</string>
    <string name="nombre">Nombre</string>
    <string name="contraseña">Contraseña</string>
    <string name="repetir_contraseña">Repetir Contraseña</string>
    <string name="email">E-mail</string>
    <string name="tipotarjeta">Tipo de Tarjeta:</string>
    <string name="numerotarjeta">Número de Tarjeta</string>
    <string name="CVV">CVV</string>
    <string name="debito">Débito</string>
    <string name="credito">Crédito</string>
    <string name="fechavencimiento">Fecha de Vencimiento:</string>
    <string name="mes">MM</string>
    <string name="año">AA</string>
    <string name="cbu">CBU</string>
    <string name="aliascbu">Alias CBU</string>
    <string name="qcargainicial">Realizar Carga Inicial?</string>
    <string name="creditoinicial">Crédito Inicial</string>
    <string name="tyc">Acepto los Términos y Condiciones</string>
    <string name="registrar">Registrar</string>
    <string name="home">Home</string>
    <string name="a1">Registro</string>
    <string name="a2">Añadir Plato</string>
    <string name="a3">Seleccionar Plato</string>
    <string name="registrousuario">Registrarse</string>
    <string name="addplato">Agregar Plato</string>
    <string name="selectplato">Elegir Plato</string>
    <string name="sendmeal">SendMeal</string>
    <string name="desc">Descripción</string>
    <string name="precio">Precio</string>
    <string name="calorias">Calorias</string>
    <string name="guardar">GUARDAR</string>
    <string name="PedidoActivity">Pedido Activity</string>
    <string name="GestionarPedido">Realizar Pedido</string>
    <string name="DatosPedido">Entrega</string>
    <string name="Direccion">Dirección</string>
    <string name="Delivery">Delivery</string>
    <string name="Carrito">Carrito</string>
    <string name="Confirmar">Confirmar Pedido</string>
    <string name="Confirmado">Pedido Confirmado</string>
    <string name="google_maps_key">AIzaSyC2DONctgKjlv2IQ8uzguSW2zhorejwbWA</string>
    <string name="SacarFoto">Tomar Foto</string>
    <string name="BuscarFoto">Seleccionar Foto</string>

</resources>