<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Actividades.PedidoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cremita"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarPedido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:menu="@menu/gobackmenu">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="?android:attr/actionBarSize"
                android:text="@string/PedidoActivity"
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:id="@+id/editlo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="0dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageViewDatos"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="start"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"
                app:srcCompat="@drawable/ic_baseline_edit_24" />

            <Switch
                android:id="@+id/switch2"
                android:layout_width="324dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="4dp"
                android:text="@string/Delivery"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardEntrega"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:id="@+id/datosLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editTextTextEmailAddress3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/editTextTextPersonName4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/Direccion"
                    android:inputType="textPersonName" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/carlo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageViewCarrito"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="left"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"
                app:srcCompat="@drawable/ic_baseline_shopping_cart_24" />

            <Button
                android:id="@+id/buttonAddPlato"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:text="@string/addplato" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/listaLayOut"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="25dp"
            android:background="@color/blanco"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewListita"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:textStyle="bold"
                android:textSize="12sp"
                android:gravity="center"
                android:text="@string/Carrito" />

            <TextView
                android:id="@+id/listaP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonConfirmar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_gravity="bottom"
            android:text="@string/Confirmar" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>